<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragment.WeatherFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:padding="12dp"
            android:text="@string/weather_forecast"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgLogo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/sunny_day_rafiki"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLabel" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/baseline_search_24"
            android:drawablePadding="10dp"
            android:hint="@string/enter_city_name"
            android:imeOptions="actionDone"
            android:padding="12dp"
            android:singleLine="true"
            android:textSize="16sp"
            android:inputType="textCapWords"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            app:layout_constraintTop_toBottomOf="@id/imgLogo" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/tvDescriptionLbl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtSearch"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tvTempLbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/temperature"
            android:textAlignment="viewEnd"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/tvTemp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtSearch" />

        <TextView
            android:id="@+id/tvTemp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvTempLbl"
            app:layout_constraintTop_toTopOf="@id/tvTempLbl"
            tools:text="32 C" />

        <TextView
            android:id="@+id/tvHumidityLbl"
            android:layout_width="202dp"
            android:layout_height="26dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/humidity"
            android:textAlignment="viewEnd"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/tvHumidity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTemp" />

        <TextView
            android:id="@+id/tvHumidity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvHumidityLbl"
            app:layout_constraintTop_toTopOf="@id/tvHumidityLbl"
            tools:text="32 C" />


        <TextView
            android:id="@+id/tvWindLbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/wind_speed"
            android:textAlignment="viewEnd"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/tvWind"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvHumidityLbl" />

        <TextView
            android:id="@+id/tvWind"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvWindLbl"
            app:layout_constraintTop_toTopOf="@id/tvWindLbl"
            tools:text="32 C" />

        <TextView
            android:id="@+id/tvDescriptionLbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="5dp"
            android:text="@string/weather_description"
            android:textAlignment="viewEnd"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvWindLbl" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginStart="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvDescriptionLbl"
            app:layout_constraintTop_toBottomOf="@+id/tvDescriptionLbl"
            tools:text="32 C" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnForecast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/click_to_see_forecast"
            android:textAllCaps="false"
            android:layout_margin="12dp"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDescription" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>